fix icons wrapping outside of div

--- a/src/components/Icons/Icons.scss
+++ b/src/components/Icons/Icons.scss
@@ -1,7 +1,7 @@
 .icon-container {
   display: flex;
   margin-top: 5px;
-  width: 32px;
+  flex-wrap: wrap;
   .items {
     margin-right: 5px;
     list-style-type: none;
